--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ui.activities.DemirbasActivity"></activity>
+        android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".ui.activities.StartActivity"
             android:screenOrientation="portrait"
@@ -25,11 +24,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.activities.MainActivity"
-            android:screenOrientation="portrait" />
-        <activity
             android:name=".ui.activities.LoginActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activities.MainActivity"
+            android:screenOrientation="portrait" />
+        <!--<activity-->
+            <!--android:name=".ui.activities.DemirbasActivity"-->
+            <!--android:screenOrientation="portrait"></activity>-->
     </application>
 
 </manifest>
